# otter-mcp

./: .mcp.json  README.md  pyproject.toml
otter_mcp/: __main__.py  client.py  server.py
