[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "otter-mcp"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["mcp>=1.27", "pyotp>=2.9"]

[project.scripts]
otter-mcp = "otter_mcp.server:main"

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # Ruff-specific rules
]
ignore = [
    "E501", # line length — enforced by Black
]

[tool.ruff.lint.isort]
known-first-party = ["otter_mcp"]

[tool.black]
target-version = ["py310"]
line-length = 88
